typos and extracting custom CSS

--- a/index.html
+++ b/index.html
@@ -10,92 +10,8 @@
   <title>Mathieu Nassif</title>
 
   <link href="assets/css/bootstrap.css" rel="stylesheet">
+  <link href="assets/css/custom-style.css" rel="stylesheet">
   <link href="https://www.cs.mcgill.ca/~mnassif/" rel="canonical">
-
-  <style>
-    html {
-      scroll-behavior: smooth;
-    }
-
-    body {
-      position: relative;
-    }
-
-    .bd-placeholder-img {
-      font-size: 1.125rem;
-      text-anchor: middle;
-      -webkit-user-select: none;
-      -moz-user-select: none;
-      -ms-user-select: none;
-      user-select: none;
-    }
-
-    @media (min-width: 768px) {
-      .bd-placeholder-img-lg {
-        font-size: 3.5rem;
-      }
-    }
-
-    .screen {
-      min-height: 100vh;
-      padding-top: 5rem;
-    }
-
-    a {
-      color: #2b445c;
-      font-weight: 600;
-    }
-
-    header a {
-      font-weight: bold;
-    }
-
-    span.invisible {
-      display: none;
-    }
-
-    img.text-icon {
-      height: 1em;
-    }
-
-    address li {
-      list-style-type: none;
-    }
-
-    address ul {
-      padding: 0;
-      margin: 0;
-    }
-
-    #headshot {
-      max-height: 362px;
-    }
-
-    ul.inline {
-      padding: 0;
-      margin: 0;
-    }
-
-    ul.inline li {
-      display: inline;
-    }
-
-    ul.inline li:after {
-      content: ' \002022 ';
-    }
-
-    ul.inline li:last-child:after {
-      content: '';
-    }
-
-    ul.twolevels > li {
-      list-style-type: none;
-    }
-
-    ul.twolevels > li > ul > li {
-      list-style-type: disc;
-    }
-  </style>
 </head>
 
 <body data-spy="scroll" data-target="#topNavbar">
@@ -149,31 +65,26 @@
               Canada
             </p>
             <ul>
-              <li>&#x1F4E7;Email: mnassif<span class="invisible"> [REMOVE THIS] </span>@cs<span class="invisible">
-                  [AND
-                  THIS] </span>.mcgill.<span class="invisible"> [AND THAT] </span>ca</li>
-              <li><img src="assets/img/github-icon.png" alt="GitHub Icon" class="text-icon" /> GitHub: <a
-                  href="https://github.com/nassifm">nassifm</a></li>
-              <li><img src="assets/img/scholar-icon.png" alt="Google Scholar Icon" class="text-icon" /> Google
-                Scholar: <a href="https://scholar.google.com/citations?user=TeuXRvAAAAAJ">Mathieu Nassif</a></li>
-              <li><img src="assets/img/dblp-icon.png" alt="DBLP Icon" class="text-icon">  DBLP: <a href="https://dblp.uni-trier.de/pers/hd/n/Nassif:Mathieu">Mathieu Nassif</a></li>
-              <li><img src="assets/img/orcid-icon.png" alt="ORCiD Icon" class="text-icon" /> ORCiD: <a
-                  href="https://orcid.org/0000-0003-0211-7256">0000-0003-0211-7256</a></li>
+              <li>&#x1F4E7;Email: mnassif<span class="invisible"> [REMOVE THIS] </span>@cs<span class="invisible"> [AND THIS] </span>.mcgill.<span class="invisible"> [AND THAT] </span>ca</li>
+              <li><img src="assets/img/github-icon.png" alt="GitHub Icon" class="text-icon" /> GitHub: <a href="https://github.com/nassifm">nassifm</a></li>
+              <li><img src="assets/img/scholar-icon.png" alt="Google Scholar Icon" class="text-icon" /> Google Scholar: <a href="https://scholar.google.com/citations?user=TeuXRvAAAAAJ">Mathieu Nassif</a></li>
+              <li><img src="assets/img/dblp-icon.png" alt="DBLP Icon" class="text-icon"> DBLP: <a href="https://dblp.uni-trier.de/pers/hd/n/Nassif:Mathieu">Mathieu Nassif</a></li>
+              <li><img src="assets/img/orcid-icon.png" alt="ORCiD Icon" class="text-icon" /> ORCiD: <a href="https://orcid.org/0000-0003-0211-7256">0000-0003-0211-7256</a></li>
             </ul>
           </address>
         </div>
         <div class="col">
           <h5>Biography</h5>
           <p>
-            Mathieu Nassif is a Ph.D. student in Computer Science at McGill University. His research focuses on the
-            extraction, representation, and manipulation of knowledge in software systems to optimize the contribution
-            of developers.
+            Mathieu Nassif is a Ph.D. student in Computer Science at McGill University. His research focuses
+            on the extraction, representation, and manipulation of knowledge in software systems to optimize
+            the contribution of developers.
           </p>
           <p>
-            Mathieu received a M.Sc. in Computer Science from McGill University in 2018. His thesis explored a flexibly
-            approach to embed documentation directly in source code to reduce the redundancy of information in software
-            systems while improving documentation quality. Mathieu received a B.Sc. in Mathematics from Université de
-            Montréal in 2016.
+            Mathieu received a M.Sc. in Computer Science from McGill University in 2018. His thesis explored
+            a flexibly approach to embed documentation directly in source code to reduce the redundancy of
+            information in software systems while improving documentation
+            quality. Mathieu received a B.Sc. in Mathematics from Université de Montréal in 2016.
           </p>
           <h5>Research Keywords</h5>
           <ul class="inline">
@@ -194,7 +105,8 @@
         <li>
           <strong>2020</strong>
           <ul>
-            <li>Mathieu Nassif, Alexa Hernandez, Ashvitha Sridharan, and Martin P. Robillard. <a href="https://arxiv.org/abs/2005.08750">Generating Unit Tests for Documentation</a>. <em>arXiv preprint</em>, 2005.08750, 12 pages, 2020.</li>
+            <li>Mathieu Nassif, Alexa Hernandez, Ashvitha Sridharan, and Martin P. Robillard. <a href="https://arxiv.org/abs/2005.08750">Generating Unit Tests for Documentation</a>. <em>arXiv
+                preprint</em>, 2005.08750, 12 pages, 2020.</li>
             <li>Mathieu Nassif, Christoph Treude, and Martin P. Robillard. <a href="https://doi.org/10.1109/TSE.2018.2836450">Automatically Categorizing Software Technologies</a>. <em>IEEE Transactions on Software Engineering</em>, 46(1):20-32, January, 2020.</li>
           </ul>
         </li>
@@ -215,7 +127,8 @@
         <li>
           <strong>2017</strong>
           <ul>
-            <li>Mathieu Nassif and Martin P. Robillard. <a href="https://doi.org/10.1109/ICSME.2017.64">Revisiting Turnover-Induced Knowledge Loss in Software Projects</a>. In <em>Proceedings of the 33rd IEEE International Conference on Software Maintenance and Evolution</em>, pages 261–272, September, 2017.</li>
+            <li>Mathieu Nassif and Martin P. Robillard. <a href="https://doi.org/10.1109/ICSME.2017.64">Revisiting Turnover-Induced Knowledge Loss in Software Projects</a>. In <em>Proceedings of the 33rd IEEE International Conference on Software Maintenance and Evolution</em>, pages 261–272, September, 2017.
+            </li>
           </ul>
         </li>
       </ul>
@@ -226,13 +139,17 @@
       <ul class="twolevels">
         <li><strong>Canada</strong>
           <ul>
-            <li>2019-2022: <a href="https://www.nserc-crsng.gc.ca/students-etudiants/pg-cs/bellandpostgrad-belletsuperieures_eng.asp">NSERC Postgraduate Scholarship - Doctoral program</a></li>
+            <li>2019-2022: <a
+                href="https://www.nserc-crsng.gc.ca/students-etudiants/pg-cs/bellandpostgrad-belletsuperieures_eng.asp">NSERC
+                Postgraduate Scholarship - Doctoral program</a></li>
           </ul>
         </li>
         <li>
           <strong>Québec</strong>
           <ul>
-            <li>2018-2022: <a href="http://www.frqnt.gouv.qc.ca/bourses-et-subventions/consulter-les-programmes-remplir-une-demande/bourse/bourses-de-2supesup-et-3supesup-cycles-ipnil6or1497465925673">FRQNT Bourse de doctorat en recherche</a></li>
+            <li>2018-2022: <a
+                href="http://www.frqnt.gouv.qc.ca/bourses-et-subventions/consulter-les-programmes-remplir-une-demande/bourse/bourses-de-2supesup-et-3supesup-cycles-ipnil6or1497465925673">FRQNT
+                Bourse de doctorat en recherche</a></li>
             <li>Summer 2015: <a href="http://ism.uqam.ca/scholarships/#4">ISM Bourse d'été de premier cycle</a></li>
           </ul>
         </li>
@@ -247,16 +164,37 @@
     </div>
 
     <div class="screen" id="Teaching">
-      <h2>Teaching Experiences</h2>
-      <ul>
-        <li>Teaching Assistant, <a href="https://www.cs.mcgill.ca/~martin/teaching/comp599-winter-2020.html">COMP 599</a>, <em>Mobile Application Development</em>, Winter 2020</li>
-        <li>Teaching Assistant, <a href="https://github.com/prmr/COMP303/">COMP 303</a>, <em>Software Design</em>, Fall 2019</li>
-        <li>Teaching Assistant, <a href="https://github.com/jin-guo/COMP303_Winter2019">COMP 303</a>>, <em>Software Design</em>, Winter 2019</li>
-        <li>Co-Lecturer, <a href="https://www.cs.mcgill.ca/media/academic/courses/14_COMP_303_RWZgnKC.pdf">COMP 303</a>, <em>Software Design</em>, Fall 2018</li>
-        <li>Teaching Assistant, <a href="https://www.cs.mcgill.ca/~chang/teaching/cs350/index.php">COMP 350</a>, <em>Numerical Computing</em>, Fall 2018</li>
-        <li>Teaching Assistant, <a href="https://www.mcgill.ca/study/2017-2018/courses/comp-360">COMP 360</a>, <em>Algorithm Design</em>, Winter 2018</li>
-        <li>Teaching Assistant, <a href="https://github.com/prmr/COMP303/">COMP 303</a>, <em>Software Design</em>, Fall 2017</li>
-        <li>Teaching Assistant, <a href="https://github.com/prmr/COMP303/">COMP 303</a>, <em>Software Design</em>, Winter 2017</li>
+      <h2>Teaching Experience</h2>
+      <ul class="twolevels">
+        <li>
+          <strong>Co-Lecturer</strong>
+          <ul>
+            <li><a href="https://www.cs.mcgill.ca/media/academic/courses/14_COMP_303_RWZgnKC.pdf">COMP
+                303</a>, <em>Software Design</em>, Fall 2018</li>
+          </ul>
+        </li>
+        <li>
+          <strong>Teaching Assistant</strong>
+          <ul>
+            <li><a href="https://www.cs.mcgill.ca/~martin/teaching/comp599-winter-2020.html">COMP
+                599</a>, <em>Mobile Application Development</em>, Winter 2020</li>
+            <li><a href="https://github.com/prmr/COMP303/">COMP 303</a>, <em>Software
+                Design</em>, Fall 2019</li>
+            <li><a href="https://github.com/jin-guo/COMP303_Winter2019">COMP 303</a>,
+              <em>Software
+                Design</em>, Winter 2019</li>
+            <li><a href="https://www.cs.mcgill.ca/~chang/teaching/cs350/index.php">COMP
+                350</a>,
+              <em>Numerical Computing</em>, Fall 2018</li>
+            <li><a href="https://www.mcgill.ca/study/2017-2018/courses/comp-360">COMP
+                360</a>,
+              <em>Algorithm Design</em>, Winter 2018</li>
+            <li><a href="https://github.com/prmr/COMP303/">COMP 303</a>, <em>Software
+                Design</em>, Fall 2017</li>
+            <li><a href="https://github.com/prmr/COMP303/">COMP 303</a>, <em>Software
+                Design</em>, Winter 2017</li>
+          </ul>
+        </li>
       </ul>
     </div>
   </main>
