add missing address line

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
           <address>
             <p>
               McConnell Engineering Bldg., Room 225<br />
+              3480 University St.<br />
               Montréal, QC, H3A 0E9<br />
               Canada
             </p>
