--- a/index.html
+++ b/index.html
@@ -199,6 +199,12 @@
       </ul>
     </div>
   </main>
+
+  <footer class="text-muted text-center">
+    <span class="line">Built with <a href="https://getbootstrap.com/">Bootstrap v4.5</a>.</span>
+    <span class="line">© 2020 Mathieu Nassif</span>
+  </footer>
+
   <script src="assets/js/jquery-3.5.1.slim.min.js"></script>
   <script src="assets/js/bootstrap.bundle.js"></script>
 </body>
