added new paper and fix UI issues

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Mathieu Nassif's personal website">
+  <meta name="description" content="Mathieu Nassif is a PhD student in Computer Science at McGill University, under the supervision of Martin Robillard. His research interests include software engineering, design, and documentation, as well as knowledge management.">
   <meta name="keywords" content="Mathieu Nassif, Nassif Mathieu, mnassif, nassifm">
   <meta name="author" content="Mathieu Nassif">
   <title>Mathieu Nassif</title>
@@ -48,13 +48,17 @@
       <div class="row">
         <div class="col-xl-auto col-lg-4 col-sm-5 col-5">
           <img src="assets/img/Mathieu.jpg" alt="Mathieu's portrait" class="img-fluid rounded" id="headshot" />
+          <br/>
+          <p class="footnote">
+            <small>Photo credit: R'ay Fodor</small>
+          </p>
         </div>
         <div class="col-xl-auto col-lg-8 col-sm-7">
           <h3>Mathieu Nassif</h3>
           <h5>Ph.D. Student</h5>
           <p>
             Supervised by <a href="https://www.cs.mcgill.ca/~martin/">Prof. Martin P. Robillard</a><br />
-            <a href="https://www.cs.mcgill.ca/~martin/students.html">KAST Research Group</a><br />
+            <a href="https://www.cs.mcgill.ca/~martin/students.html">McGill Software Technology Lab</a><br />
             <a href="https://www.cs.mcgill.ca/">School of Computer Science</a><br />
             <a href="https://mcgill.ca/">McGill University</a>
           </p>
@@ -66,7 +70,7 @@
               Canada
             </p>
             <ul>
-              <li>&#x1F4E7;Email: mnassif<span class="invisible"> [REMOVE THIS] </span>@cs<span class="invisible"> [AND THIS] </span>.mcgill.<span class="invisible"> [AND THAT] </span>ca</li>
+              <li><img src="assets/img/email-icon.png" alt="Email Icon" class="text-icon" /> Email: mnassif<span class="invisible"> [REMOVE THIS] </span>@cs<span class="invisible"> [AND THIS] </span>.mcgill.<span class="invisible"> [AND THAT] </span>ca</li>
               <li><img src="assets/img/github-icon.png" alt="GitHub Icon" class="text-icon" /> GitHub: <a href="https://github.com/nassifm">nassifm</a></li>
               <li><img src="assets/img/scholar-icon.png" alt="Google Scholar Icon" class="text-icon" /> Google Scholar: <a href="https://scholar.google.com/citations?user=TeuXRvAAAAAJ">Mathieu Nassif</a></li>
               <li><img src="assets/img/dblp-icon.png" alt="DBLP Icon" class="text-icon"> DBLP: <a href="https://dblp.uni-trier.de/pers/hd/n/Nassif:Mathieu">Mathieu Nassif</a></li>
@@ -83,7 +87,7 @@
           </p>
           <p>
             Mathieu received a M.Sc. in Computer Science from McGill University in 2018. His thesis explored
-            a flexibly approach to embed documentation directly in source code to reduce the redundancy of
+            a flexible approach to embed documentation directly in source code to reduce the redundancy of
             information in software systems while improving documentation
             quality. Mathieu received a B.Sc. in Mathematics from Université de Montréal in 2016.
           </p>
@@ -106,6 +110,7 @@
         <li>
           <strong>2020</strong>
           <ul>
+            <li>Mathieu Nassif and Martin P. Robillard. <a href="https://www.cs.mcgill.ca/~martin/papers/ese2020b.pdf">Wikifying Software Artifacts</a>. To appear in <em>Empirical Software Engineering</em>, 36 pages, 2020.</li>
             <li>Mathieu Nassif, Alexa Hernandez, Ashvitha Sridharan, and Martin P. Robillard. <a href="https://arxiv.org/abs/2005.08750">Generating Unit Tests for Documentation</a>. <em>arXiv
                 preprint</em>, 2005.08750, 12 pages, 2020.</li>
             <li>Mathieu Nassif, Christoph Treude, and Martin P. Robillard. <a href="https://doi.org/10.1109/TSE.2018.2836450">Automatically Categorizing Software Technologies</a>. <em>IEEE Transactions on Software Engineering</em>, 46(1):20-32, January, 2020.</li>
@@ -164,7 +169,7 @@
       </ul>
     </div>
 
-    <div class="screen" id="Teaching">
+    <div class="screen last-screen" id="Teaching">
       <h2>Teaching Experience</h2>
       <ul class="twolevels">
         <li>
@@ -177,9 +182,13 @@
         <li>
           <strong>Teaching Assistant</strong>
           <ul>
+            <li><a href="https://github.com/jin-guo/COMP303_Winter2021">COMP 303</a>, <em>Software
+                Design</em>, Winter 2021</li>
+                <li><a href="https://github.com/prmr/COMP303/">COMP 303</a>, <em>Software
+                    Design</em>, Fall 2020</li>
             <li><a href="https://www.cs.mcgill.ca/~martin/teaching/comp599-winter-2020.html">COMP
                 599</a>, <em>Mobile Application Development</em>, Winter 2020</li>
-            <li><a href="https://github.com/prmr/COMP303/">COMP 303</a>, <em>Software
+            <li><a href="https://github.com/prmr/COMP303/tree/2019F">COMP 303</a>, <em>Software
                 Design</em>, Fall 2019</li>
             <li><a href="https://github.com/jin-guo/COMP303_Winter2019">COMP 303</a>,
               <em>Software
@@ -190,9 +199,9 @@
             <li><a href="https://www.mcgill.ca/study/2017-2018/courses/comp-360">COMP
                 360</a>,
               <em>Algorithm Design</em>, Winter 2018</li>
-            <li><a href="https://github.com/prmr/COMP303/">COMP 303</a>, <em>Software
+            <li><a href="https://github.com/prmr/COMP303/tree/2017F">COMP 303</a>, <em>Software
                 Design</em>, Fall 2017</li>
-            <li><a href="https://github.com/prmr/COMP303/">COMP 303</a>, <em>Software
+            <li><a href="https://github.com/prmr/COMP303/tree/2017W">COMP 303</a>, <em>Software
                 Design</em>, Winter 2017</li>
           </ul>
         </li>
@@ -201,12 +210,16 @@
   </main>
 
   <footer class="text-muted text-center">
+    <span class="line">Thanks to <a href="https://www.cs.mcgill.ca/~martin/">Martin</a> for the template ideas.</span>
     <span class="line">Built with <a href="https://getbootstrap.com/">Bootstrap v4.5</a>.</span>
     <span class="line">© 2020 Mathieu Nassif</span>
+    <br/>
+    <span class="line"><small><em>Last update: 10 January 2021</em></small></span>
   </footer>
 
   <script src="assets/js/jquery-3.5.1.slim.min.js"></script>
   <script src="assets/js/bootstrap.bundle.js"></script>
+  <script src="assets/js/custom-scripts.js"></script>
 </body>
 
 </html>
