--- a/index.html
+++ b/index.html
@@ -108,11 +108,13 @@
       <h2>Publications</h2>
       <ul class="twolevels">
         <li>
+          <strong>2021</strong>
+          <ul>
+            <li>Mathieu Nassif, Alexa Hernandez, Ashvitha Sridharan, and Martin P. Robillard. <a href="https://arxiv.org/abs/2005.08750">Generating Unit Tests for Documentation</a>. To appear in <em>IEEE Transactions on Software Engineering</em>, 12 pages, 2020.</li>
+            <li>Mathieu Nassif and Martin P. Robillard. <a href="https://doi.org/10.1007/s10664-020-09918-4">Wikifying Software Artifacts</a>. <em>Empirical Software Engineering</em>, 26(2): 31:1-31:31, March, 2021.</li>
+          </ul>
           <strong>2020</strong>
           <ul>
-            <li>Mathieu Nassif and Martin P. Robillard. <a href="https://www.cs.mcgill.ca/~martin/papers/ese2020b.pdf">Wikifying Software Artifacts</a>. To appear in <em>Empirical Software Engineering</em>, 36 pages, 2020.</li>
-            <li>Mathieu Nassif, Alexa Hernandez, Ashvitha Sridharan, and Martin P. Robillard. <a href="https://arxiv.org/abs/2005.08750">Generating Unit Tests for Documentation</a>. <em>arXiv
-                preprint</em>, 2005.08750, 12 pages, 2020.</li>
             <li>Mathieu Nassif, Christoph Treude, and Martin P. Robillard. <a href="https://doi.org/10.1109/TSE.2018.2836450">Automatically Categorizing Software Technologies</a>. <em>IEEE Transactions on Software Engineering</em>, 46(1):20-32, January, 2020.</li>
           </ul>
         </li>
@@ -145,9 +147,9 @@
       <ul class="twolevels">
         <li><strong>Canada</strong>
           <ul>
-            <li>2019-2022: <a
+            <li>2019-2022: <a href="https://www.nserc-crsng.gc.ca/Students-Etudiants/PG-CS/CGSD-BESCD_eng.asp">Canada Graduate Scholarship - Doctoral</a> (upgraded from <a
                 href="https://www.nserc-crsng.gc.ca/students-etudiants/pg-cs/bellandpostgrad-belletsuperieures_eng.asp">NSERC
-                Postgraduate Scholarship - Doctoral program</a></li>
+                Postgraduate Scholarship - Doctoral</a> in 2021)</li>
           </ul>
         </li>
         <li>
@@ -214,7 +216,7 @@
     <span class="line">Built with <a href="https://getbootstrap.com/">Bootstrap v4.5</a>.</span>
     <span class="line">© 2020 Mathieu Nassif</span>
     <br/>
-    <span class="line"><small><em>Last update: 10 January 2021</em></small></span>
+    <span class="line"><small><em>Last update: 8 June 2021</em></small></span>
   </footer>
 
   <script src="assets/js/jquery-3.5.1.slim.min.js"></script>
