DScribe DOI and year fixed

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <li>
           <strong>2021</strong>
           <ul>
-            <li>Mathieu Nassif, Alexa Hernandez, Ashvitha Sridharan, and Martin P. Robillard. <a href="https://arxiv.org/abs/2005.08750">Generating Unit Tests for Documentation</a>. To appear in <em>IEEE Transactions on Software Engineering</em>, 12 pages, 2020.</li>
+            <li>Mathieu Nassif, Alexa Hernandez, Ashvitha Sridharan, and Martin P. Robillard. <a href="https://doi.org/10.1109/TSE.2021.3087087">Generating Unit Tests for Documentation</a>. To appear in <em>IEEE Transactions on Software Engineering</em>, 12 pages, 2021.</li>
             <li>Mathieu Nassif and Martin P. Robillard. <a href="https://doi.org/10.1007/s10664-020-09918-4">Wikifying Software Artifacts</a>. <em>Empirical Software Engineering</em>, 26(2): 31:1-31:31, March, 2021.</li>
           </ul>
           <strong>2020</strong>
@@ -216,7 +216,7 @@
     <span class="line">Built with <a href="https://getbootstrap.com/">Bootstrap v4.5</a>.</span>
     <span class="line">© 2020 Mathieu Nassif</span>
     <br/>
-    <span class="line"><small><em>Last update: 8 June 2021</em></small></span>
+    <span class="line"><small><em>Last update: 9 June 2021</em></small></span>
   </footer>
 
   <script src="assets/js/jquery-3.5.1.slim.min.js"></script>
