--- a/casdoc/index.html
+++ b/casdoc/index.html
@@ -10,11 +10,22 @@
       <meta name="author" content="">
   -->
   <title>Casdoc</title>
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
 </head>
 <body>
-    <h1>Introducing Casdoc</h1>
-    <p>
-        We introduce <strong>Casdoc</strong>, a new technology to improve the presentation of code examples.
-    </p>
+    <main class="flex-shrink-0">
+        <div class="container">
+            <h1 class="mt-5">Introducing Casdoc</h1>
+            <p class="lead">
+                We introduce <strong>Casdoc</strong>, a new technology to improve the presentation of code examples. You can find here examples of code examples annotated using the Casdoc technology.
+            </p>
+            <h2>Code Examples</h2>
+            <ul>
+                <li><strong><a href=examples/SqlDatabaseConnectionDemo>JDBC Code Example:</a></strong> Showcases how to use Java's JDBC API to connect to an SQL database and read/write values from/to its tables.</li>
+            </ul>
+        </div>
+    </main>
 </body>
 </html>
