fix 'examples of examples'

--- a/casdoc/index.html
+++ b/casdoc/index.html
@@ -19,7 +19,7 @@
         <div class="container">
             <h1 class="mt-5">Introducing Casdoc</h1>
             <p class="lead">
-                We introduce <strong>Casdoc</strong>, a new technology to improve the presentation of code examples. You can find here examples of code examples annotated using the Casdoc technology.
+                We introduce <strong>Casdoc</strong>, a new technology to improve the presentation of code examples. You can find here code examples annotated using the Casdoc technology.
             </p>
             <h2>Code Examples</h2>
             <ul>
