more casdoc examples

--- a/casdoc/examples/SqlDatabaseConnectionDemo.html
+++ b/casdoc/examples/SqlDatabaseConnectionDemo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 	<head>
-		<title>SqlDatabaseConnectionDemo</title>
+		<title>Casdoc - SqlDatabaseConnectionDemo</title>
         <style>
 @media (max-width: 767px) {
 	.center-on-large {
