--- a/casdoc/index.html
+++ b/casdoc/index.html
@@ -23,7 +23,9 @@
             </p>
             <h2>Code Examples</h2>
             <ul>
-                <li><strong><a href=examples/SqlDatabaseConnectionDemo>JDBC Code Example:</a></strong> Showcases how to use Java's JDBC API to connect to an SQL database and read/write values from/to its tables.</li>
+                <li><strong><a href="examples/SqlDatabaseConnectionDemo">JDBC Code Example:</a></strong> Showcases how to use Java's JDBC API to connect to an SQL database and read/write values from/to its tables.</li>
+                <li><strong><a href="examples/FunctionalProgrammingDemo">Functional Programming Example:</a></strong> Showcases how to use lambda expressions and method references, introduced in Java 8, to implement functional interfaces.</li>
+                <li><strong><a href="examples/JavaReflectionDemo">Reflection Example:</a></strong> Showcases how to use Java's Reflection API to query information about classes, invoke methods and constructors, and access and modify field values, all at run-time.</li>
             </ul>
         </div>
     </main>
