add ICSE demo and update TAships

--- a/index.html
+++ b/index.html
@@ -108,12 +108,20 @@
       <h2>Publications</h2>
       <ul class="twolevels">
         <li>
+          <strong>2022</strong>
+          <ul>
+            <li>Alexa Hernandez, Mathieu Nassif, and Martin P. Robillard. <a href="">DScribe: Co-generating Unit Tests and Documentation</a>. Research Demonstration. To appear in <em>Proceedings of the 44th ACM/IEEE International Conference on Software Engineering</em>, 4 pages, May, 2022.</li>
+          </ul>
+        </li>
+        <li>
           <strong>2021</strong>
           <ul>
             <li>Deeksha M. Arya, Mathieu Nassif, and Martin P. Robillard. <a href="https://doi.org/10.1109/MS.2021.3090978">A Data-Centric Study of Software Tutorial Design</a>. To appear in <em>IEEE Software</em>, 10 pages, 2021.</li>
             <li>Mathieu Nassif, Alexa Hernandez, Ashvitha Sridharan, and Martin P. Robillard. <a href="https://doi.org/10.1109/TSE.2021.3087087">Generating Unit Tests for Documentation</a>. To appear in <em>IEEE Transactions on Software Engineering</em>, 12 pages, 2021.</li>
             <li>Mathieu Nassif and Martin P. Robillard. <a href="https://doi.org/10.1007/s10664-020-09918-4">Wikifying Software Artifacts</a>. <em>Empirical Software Engineering</em>, 26(2): 31:1-31:31, March, 2021.</li>
           </ul>
+        </li>
+        <li>
           <strong>2020</strong>
           <ul>
             <li>Mathieu Nassif, Christoph Treude, and Martin P. Robillard. <a href="https://doi.org/10.1109/TSE.2018.2836450">Automatically Categorizing Software Technologies</a>. <em>IEEE Transactions on Software Engineering</em>, 46(1):20-32, January, 2020.</li>
@@ -185,10 +193,14 @@
         <li>
           <strong>Teaching Assistant</strong>
           <ul>
+            <li><a href="https://cs.mcgill.ca/~martin/teaching/comp529-winter-2022/">COMP 529</a>,
+                <em>Software Architecture</em>, Winter 2022</li>
+            <li><a href="https://github.com/prmr/COMP303">COMP 303</a>, <em>Software Design</em>,
+                Fall 2021</li>
             <li><a href="https://github.com/jin-guo/COMP303_Winter2021">COMP 303</a>, <em>Software
                 Design</em>, Winter 2021</li>
-                <li><a href="https://github.com/prmr/COMP303/">COMP 303</a>, <em>Software
-                    Design</em>, Fall 2020</li>
+            <li><a href="https://github.com/prmr/COMP303/tree/2020F">COMP 303</a>, <em>Software
+                Design</em>, Fall 2020</li>
             <li><a href="https://www.cs.mcgill.ca/~martin/teaching/comp599-winter-2020.html">COMP
                 599</a>, <em>Mobile Application Development</em>, Winter 2020</li>
             <li><a href="https://github.com/prmr/COMP303/tree/2019F">COMP 303</a>, <em>Software
@@ -217,7 +229,7 @@
     <span class="line">Built with <a href="https://getbootstrap.com/">Bootstrap v4.5</a>.</span>
     <span class="line">© 2020 Mathieu Nassif</span>
     <br/>
-    <span class="line"><small><em>Last update: 6 July 2021</em></small></span>
+    <span class="line"><small><em>Last update: 2 February 2022</em></small></span>
   </footer>
 
   <script src="assets/js/jquery-3.5.1.slim.min.js"></script>
