fix small bug 2

--- a/casdoc/online-demo/index.html
+++ b/casdoc/online-demo/index.html
@@ -188,12 +188,12 @@
 			<input type="file" name="file" disabled />
 			<button type="button" name="submit" onclick="sendRequest();" disabled>Require Login</button>
 		</form>
-		<p id="examples">
+		<p id="examples" style="display: none;">
 			For example, try the following files as starters:
 			<ul>
-				<li><a href="FunctionalProgrammingDemo.java">FunctionalProgrammingDemo.java</a> (see the <a href="FunctionalProgrammingDemo.html">result</a>)</li>
-				<li><a href="JavaReflectionDemo.java">JavaReflectionDemo.java</a> (see the <a href="JavaReflectionDemo.html">result</a>)</li>
-				<li><a href="SqlDatabaseConnectionDemo.java">SqlDatabaseConnectionDemo.java</a> (see the <a href="SqlDatabaseConnectionDemo.html">result</a>)</li>
+				<li><a target="_blank" href="FunctionalProgrammingDemo.java">FunctionalProgrammingDemo.java</a> (see the <a target="_blank" href="FunctionalProgrammingDemo.html">result</a>)</li>
+				<li><a target="_blank" href="JavaReflectionDemo.java">JavaReflectionDemo.java</a> (see the <a target="_blank" href="JavaReflectionDemo.html">result</a>)</li>
+				<li><a target="_blank" href="SqlDatabaseConnectionDemo.java">SqlDatabaseConnectionDemo.java</a> (see the <a target="_blank" href="SqlDatabaseConnectionDemo.html">result</a>)</li>
 			</ul>
 		</p>
 	</div>
